# spotlight

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: ROADMAP.md
src/: App.tsx  ClipboardApp.tsx  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/scripts/: postinst.sh  postrm.sh
src-tauri/src/: commands.rs  extension_store.rs  file_index.rs  input.rs  lib.rs  paths.rs  tray.rs  window_state.rs
src-tauri/src/apps/: index.rs  launcher.rs  mod.rs
src-tauri/src/browser/: chromium.rs  firefox.rs  mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/contacts/: mod.rs
src-tauri/src/extensions/: host.rs  mod.rs  user.rs
src-tauri/src/extensions/builtin/: ai.rs  calculator.rs  docker_ext.rs  emoji.rs  git.rs  integrations.rs  mod.rs  notes.rs  systemd_ext.rs  translate.rs
src-tauri/src/files/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/platform/: desktop.rs  mod.rs  shortcuts.rs
src-tauri/src/quick_answers/: calculator.rs  conversion.rs  currency.rs  dictionary.rs  local_time.rs  mod.rs  timezone.rs
src-tauri/src/quicklinks/: mod.rs
src-tauri/src/scripts/: mod.rs
src-tauri/src/search/: match_highlight.rs  mod.rs  ranking.rs  router.rs  types.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/snippets/: mod.rs
src-tauri/src/system_commands/: mod.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/web_search/: mod.rs
src-tauri/src/windows/: detect.rs  fallback.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs
(+23 files in other folders)
