[package]
name = "spotlight"
version = "1.0.2"
description = "Launcher estilo Spotlight para Linux"
authors = ["edsoncantuaria"]
edition = "2021"

[lib]
name = "spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
evalexpr = "12"
dirs = "6"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
mime_guess = "2"
notify = "7"
image = "0.25"
toml = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
arboard = "3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false, features = ["v3_24"] }
